# evermemos-mcp-server

./: .gitignore  LICENSE  README.md  README_zh.md  evermemos_client.py  pyproject.toml  server.py  test_mcp.py
