[project]
name = "evermemos-mcp-server"
version = "0.1.0"
description = "EverMemOS MCP Server - Long-term memory for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
evermemos-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
